regression/parse_pool/progtest12.sfp.out

sfc in program parse_pool/progtest12.sfp
syntax error at line 5, position 19:
from any goto foo bar
                  ^
